src/app/app.component.css
/* ... */
.bar-box {
  display: flex;
  align-items: center;  /* Align bar-number and bar horizontally */
  width: calc(100vw - 185px);  /* Ensure bars stretch horizontally */
  flex-grow: 1;  /* Allow bar-box to grow and fill vertical space proportionally */
  position: relative;  /* For overlay positioning */
}

.bar-number {
  font-size: 34px;
  font-weight: bold;
  margin-right: 10px;  /* Add spacing between the number and the bar */
  width: 35px;  /* Fixed width for alignment */
  text-align: center;  /* Align text to the right */
  cursor: default;
}

.bar {
  height: calc((100dvh - 100px)/11);  /* Adjust height to fit below the header */
  border-radius: 5px;
  transition: width 0.3s;
}

.bar-overlay {
  position: absolute;
  top: 0;
  left: 80px;
  height: auto;  /* Allow height to adjust based on content */
  width: calc(100vw - 250px);  /* calc so that boxes wrap appropriately */
  pointer-events: none;  /* Prevent interaction */
  mix-blend-mode: difference;  /* Contrast the background */
  white-space: normal;  /* Allow text to wrap to the next line */
  word-wrap: break-word;  /* Break long words if necessary */
  overflow-wrap: break-word;  /* Ensure compatibility for breaking long words */
  word-break: break-word;  /* Ensure long words break */
  display: block;  /* Ensure the overlay behaves as a block element */
  box-sizing: border-box;  /* Include padding in the element's width */
  line-height: 0.6;  /* Reduce space between lines : 1.0 = size of font*/
  cursor: default;
}

@media (max-width: 768px) {
  .bar-overlay {
    width: calc(100vw - 100px);
  }
}

.bar-overlay span {
  pointer-events: auto;  /* Enable pointer events only for the text */
  display: inline-block;  /* Ensure the span wraps only the text */
}

@keyframes slide-in {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.bar-count {
  font-size: 34px;
  color: red;
  width: 35px;
  height: 35px;  /* Add height to make it a square */
  display: flex;  /* Use flexbox for centering */
  align-items: center;  /* Vertically center the content */
  justify-content: left;  /* Horizontally center the content */
  text-align: center;  /* Ensure text alignment */
  cursor: default;
}

.tournament-count {
  position: absolute;
  color: blue;
  font-size: 0.5em;
  position: relative;  /* Enable relative positioning */
  top: -0.7em;  /* Move the number higher */
  justify-content: right;  /* Horizontally center the content */
}

.bar-percent {
  font-size: 24px;  /* Large font size for the number */
}

.percent-sign {
  font-size: 14px;  /* Smaller font size for the % sign */
  vertical-align: super;  /* Superscript alignment */
  color: black;  /* Black color for the % sign */
  margin-right: 5px;
}

.block-app {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1000;
}

.normal {
  display: none;
}

.user-message-popup {
  background-color: rgba(150, 149, 149, 0.8);
  box-shadow: 10px 16px 18px rgba(4, 14, 56, 0.4);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  z-index: 2100;
}

.help-dialog {
  z-index: 2000;
  overflow-y: auto;
  font-size: 1.2em;
  max-height: 90%;
  width: 50%;
  height: auto;
  color: black;
  
  background: linear-gradient(45deg, #af98e4, #c898e4, #98e4a9);
}

.help-popup-content {
  margin: 10px;
}

@media (max-width: 768px) {
  .help-dialog {
    font-size: 1em;
    width: 90%;
  }
}

.menu {
  position: fixed;
  top: 10px;
  left: 10px;
  width: 20px;
  height: 20px;
  color: white;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  overflow: hidden;
  transition: width 0.3s, height 0.3s;
  z-index: 100;
}

.menu:hover {
  width: 180px;
  height: auto;
}

.menu-header {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
  height: 20px;
  background-color: #8da8c5;
}

.menu-content {
  display: none;
  padding: 10px;
  background-color: #a9b4c0;
}

.menu:hover .menu-content {
  display: block;
}

.menu-content ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.menu-content li {
  margin: 10px 0;
}

.menu-content a {
  color: white;
  text-decoration: none;
  font-size: 16px;
}

.menu-content a:hover {
  text-decoration: underline;
}

.context-menu {
  position: absolute;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: 0 0 100px rgba(0, 0, 0, 0.7);  /* Add a subtle drop shadow */
  z-index: 2000;
  width: 150px;
  padding: 5px 0;
  background-color: #fdfdfd;
  color: black;
  border-radius: 5px;  /* Optional: Add rounded corners for a modern look */
}

.context-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
}

.context-menu ul li {
  padding: 5px 10px;
  cursor: pointer;
  position: relative;
}

.context-menu ul li:hover {
  background-color: #f0f0f0;
}

.context-menu ul li ul {
  display: none;
  position: absolute;
  left: 100%;
  top: 0;
  background-color: white;
  border: 1px solid #ccc;
  z-index: 1000;
  min-width: 150px;  /* Ensure the sub-menu has a consistent width */
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);  /* Add a subtle shadow for better visibility */
}

.context-menu ul li:hover ul {
  display: block;
}

.context-menu ul li ul li.selected {
  background-color: #007bff;  /* Highlight color (blue) */
  color: white;  /* Text color for better contrast */
}

.context-menu .menu-separator {
  height: 0.5px;  /* Make the separator thinner */
  background-color: #ccc;  /* Light gray color */
  margin: 5px 0;  /* Add spacing above and below the separator */
  list-style: none;  /* Remove bullet point styling */
  display: block;  /* Ensure it behaves as a block element */
  pointer-events: none;  /* Prevent hover or interaction */
}
/* ... */

